styles.css
body {
    background-color: black;
    color: white;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
#title {
    text-align: center;
    font-size: xx-large;
    font-weight: bold;
}
.row {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}
.widget {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    gap: -10px;
    margin: 0px;
    width: 250px
}
.caption {
    font-size: medium;
}
#country {
    font-size: larger;
}
.values {
    font-size: 45px;
    margin-top: 0px;
}
#weather-icon{
    font-size: 50px;
}
#time-icon {
    font-size: 50px;
}
.content {
    display: flex;
    flex-direction: column;
    justify-content: start;
    gap: 75px;
}
/*#event-countdown {
    margin-bottom: 0px !important;
}*/

